# ViennaPS-InterpolationWorkflow

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: config.txt  data.csv  data_concat.csv  data_consol.csv  data_pivot.csv
include/: AdvectionCallback.hpp  CSVReader.hpp  ChamferDistance.hpp  CubicSplineInterpolation.hpp  CubicSplineInterpolationEIGEN.hpp  DimensionExtraction.hpp  FeatureExtraction.hpp  FeatureReconstruction.hpp  GeometricTrenchDepositionModel.hpp  GeometricTrenchModel.hpp  GeometryExtraction.hpp  GeometryReconstruction.hpp  KDTree.hpp  MakeTrench.hpp  MakeTrenchStamp.hpp  NaturalCubicSplineInterpolation.hpp  NaturalCubicSplineInterpolationEIGEN.hpp  Parameters.hpp  SplineGridInterpolation.hpp  TrenchDeposition.hpp  Utils.hpp
scripts/: pivot_data.py  plot.py  plot_multi.py
src/: CreateData.cpp  GeometryReconstruction.cpp  InterpolationWorkflow.cpp  TestSpline.cpp
